Added Java 25 Structured Concurrency to fetch branches info.